--- a/param/furniture_part_segmentation.yaml
+++ b/param/furniture_part_segmentation.yaml
@@ -1,3 +1,5 @@
 pytorch_module_path: "/home/demo/Workspace/Assembly-Part-Segmentation/furniture_part_segmentation"
 config_file: "rgb.json"
-weight_path: "/home/demo/catkin_ws/src/assembly_part_recognition/weights/epoch_3.tar"
+weight_path: "/home/demo/catkin_ws/src/assembly_part_recognition/weights/furniture_part_test.tar"
+width: 640
+height: 480
