--- a/param/6d_pose_tracker.yaml
+++ b/param/6d_pose_tracker.yaml
@@ -1,7 +1,7 @@
 augauto_module_path: "/home/demo/Workspace/seung/AugmentedAutoencoder"
 exp_group: "exp_group/Ikea_stefan_middle"
 test_config: "aae_maskrcnn_zivid.cfg"
-gpu_id: ""
+gpu_id: "0"
 width: 640
 height: 400
 is_thresh: 0.9
