--- a/param/zivid_hole.yaml
+++ b/param/zivid_hole.yaml
@@ -1,10 +1,9 @@
 pytorch_module_path: "/home/demo/Workspace/assembly_hole_segmentation"
-weight_path: "/home/demo/catkin_ws/src/assembly_part_recognition/pretrained_weights/hole/best_Unet.pt"
-width: 640
-height: 400
-num_classes: 5
-min_depth: 1.0
-max_depth: 2.3
-grid_size: 3
+weight_path: "/home/demo/catkin_ws/src/assembly_part_recognition/pretrained_weights/hole/hole_rgb_unet.pt"
+width: 960
+height: 600
+min_depth: 1.3
+max_depth: 3.0
+cluster_thresh: 13
 gpu_id: "0"
 
