--- a/param/zivid_furniture_seg.yaml
+++ b/param/zivid_furniture_seg.yaml
@@ -3,8 +3,8 @@ pytorch_module_path: "/home/demo/Workspace/Assembly-Part-Segmentation/furniture_
 config_file: "filled_rgb_late_fusion_freeze_small.json"
 # weight_path: "/home/demo/catkin_ws/src/assembly_part_recognition/pretrained_weights/furniture_part/0802_SIM_v12_RGBD_late_freeze_small_w_noise.tar"
 weight_path: "/home/demo/catkin_ws/src/assembly_part_recognition/pretrained_weights/furniture_part/0715_rgb_albumentation/epoch_6.tar"
+rgb: "/zivid_camera/color/image_color"
 width: 640
 height: 400
 num_classes: 5
-min_depth: 1.4
-max_depth: 2.6
+debug: true
