--- a/param/azure_furniture_pose_estimator.yaml
+++ b/param/azure_furniture_pose_estimator.yaml
@@ -1,18 +1,20 @@
 augauto_module_path: "/home/demo/Workspace/seung/AugmentedAutoencoder"
 pytorch_module_path: "/home/demo/Workspace/Assembly-Part-Segmentation/furniture_part_segmentation"
 config_file: "0806_RGB_only_v2.json"
-weight_path: "/home/demo/catkin_ws/src/assembly_part_recognition/pretrained_weights/furniture_part/0814_snu_furniture_part.tar"
+weight_path: "/home/demo/catkin_ws/src/assembly_part_recognition/pretrained_weights/furniture_part/0908_Azure_SIM_v15161718_RGB_only_aug2_epoch_7.tar"
 exp_group: "exp_group/Ikea_stefan_middle"
 test_config: "aae_maskrcnn_azure.cfg"
+camera_info: "/azure1/rgb/camera_info"
 rgb: "/azure1/rgb/image_raw"
 depth: "/azure1/depth_to_rgb/image_raw"
-point: "/azure1/points2"
+point: "/points2/merged"
+camera_frame: "azure1_rgb_camera_link"
 icp_iter: 100
-gpu_id: "0"
+gpu_id: "1"
 width: 1280
-height: 960
-is_thresh: 0.9
+height: 720
+is_thresh: 0.93
 crop_offset: 0.1
 padding: true
 debug: true
-roi: [320, 960, 160, 800]
+roi: [0, 1280, 0, 720]
