--- a/param/single_azure_mpaae.yaml
+++ b/param/single_azure_mpaae.yaml
@@ -1,5 +1,16 @@
+gpu_id: "1"
+debug: false
+camera_info: "/azure1/rgb/camera_info"
+camera_frame: "azure1_rgb_camera_link"
+rgb: "/azure1/rgb/image_raw"
+depth: "/azure1/depth_to_rgb/image_raw"
+point: "/azure1/points2"
+width: 1280
+height: 720
+
 is_config_path: "/home/demo/Workspace/Assembly-Part-Segmentation/furniture_part_segmentation/config/0806_RGB_only_v2.json"
-is_weight_path: "/home/demo/catkin_ws/src/assembly_part_recognition/pretrained_weights/furniture_part/0908_Azure_SIM_v151617_RGB_only_aug2_epoch_12.tar"
+is_weight_path: "/home/demo/catkin_ws/src/assembly_part_recognition/pretrained_weights/furniture_part/train_result/0921_SIM_v1516171820_RGB_only_aug2/epoch_10.tar"
+is_thresh: 0.98
 
 pe_module_path: "/home/demo/Workspace/seung/AugmentedAutoencoder"
 pe_experiment_name: "exp_group/ikea_stefan"
@@ -12,19 +23,7 @@ n_points: 3000
 n_iter: 1000
 tolerance: 0.005
 num_levels: 5
-
-camera_info: "/azure1/rgb/camera_info"
-rgb: "/azure1/rgb/image_raw"
-depth: "/azure1/depth_to_rgb/image_raw"
-# point: "/points2/merged"
-point: "/azure1/points2"
-camera_frame: "azure1_rgb_camera_link"
-icp_iter: 3000
-gpu_id: "1"
-width: 1280
-height: 720
-is_thresh: 0.98
-crop_offset: 0.01
-debug: true
 roi: [0, 1280, 0, 720]
+
+
 
