--- a/param/single_azure_mpaae_GIST.yaml
+++ b/param/single_azure_mpaae_GIST.yaml
@@ -1,28 +1,37 @@
-gpu_id: "1"
-debug: false
+# Camera
 camera_info: "/azure1/rgb/camera_info"
 camera_frame: "azure1_rgb_camera_link"
 rgb: "/azure1/rgb/image_raw"
+rgb_rect: "/azure1/image_rect_color"
 depth: "/azure1/depth_to_rgb/image_raw"
 point: "/azure1/points2"
 width: 1280
 height: 720
-
+# Mask R-CNN
+is_gpu_id: "0"
+is_class_names: ["ikea_stefan_side_left", "ikea_stefan_long", "ikea_stefan_middle", "ikea_stefan_bottom"]
 is_config_path: "/home/demo/Workspace/Assembly-Part-Segmentation/furniture_part_segmentation/config/0806_RGB_only_v2.json"
 is_weight_path: "/home/demo/catkin_ws/src/assembly_part_recognition/pretrained_weights/furniture_part/train_result/0921_SIM_v1516171820_RGB_only_aug2/epoch_10.tar"
 is_thresh: 0.98
-
+roi: [30, 1200, 50, 690]
+# MPAAE
+pe_gpu_id: "1"
 pe_experiment_name: "exp_group/ikea_stefan"
 pe_test_config: "mpaae_maskrcnn_azure.cfg"
-
-ply_model_dir: "/home/demo/catkin_ws/src/assembly_part_recognition/src/AugmentedAutoencoder/3d_models/ply"
+pe_class_names: ["ikea_stefan_bottom", "ikea_stefan_long", "ikea_stefan_middle", "ikea_stefan_short", "ikea_stefan_side_left", "ikea_stefan_side_right"]
+use_mask_crop: [False, False, False, False] # w.r.t is_class names
+use_sameWHcrop: [True, True, True, True] 
+model_dir: "/home/demo/catkin_ws/src/assembly_knowledge/models"
 black_borders: True
-
+# ICP
 n_points: 3000
 n_iter: 1000
 tolerance: 0.005
 num_levels: 5
-roi: [0, 1280, 0, 720]
+# Reprojection Error (VSD)
+cost_type: "unit" # unit or tlinear
+delta: 20
+tau: 50
 
 
 
